mengubah judul halaman

--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<title>CSS</title>
-</head>
-<body>
-	<h1>The Dark Knight</h1>
-	<p class="thanks">Thanks to Sandhika Galih</p>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>DC</title>
+  </head>
+  <body>
+    <h1>The Dark Knight</h1>
+    <p class="thanks">Thanks to Sandhika Galih</p>
 
-	<div class="container">
-		
-		<ul class="gallery">
-			<li class="batman">
-				<a href="#batman">
-					<img src="img/thumb/batman.png">
-					<span>Batman</span>
-				</a>
+    <div class="container">
+      <ul class="gallery">
+        <li class="batman">
+          <a href="#batman">
+            <img src="img/thumb/batman.png" />
+            <span>Batman</span>
+          </a>
 
-				<div class="overlay" id="batman">
-					<a href="#" class="close">Close</a>
-					<a href="#joker" class="prev"></a>
-					<img src="img/full/batman.png" alt="">
-					<a href="#robin" class="next"></a>
-				</div>
-			</li>
+          <div class="overlay" id="batman">
+            <a href="#" class="close">Close</a>
+            <a href="#joker" class="prev"></a>
+            <img src="img/full/batman.png" alt="" />
+            <a href="#robin" class="next"></a>
+          </div>
+        </li>
 
-			<li class="robin">
-				<a href="#robin">
-					<img src="img/thumb/robin.png">
-					<span>Robin</span>
-				</a>
+        <li class="robin">
+          <a href="#robin">
+            <img src="img/thumb/robin.png" />
+            <span>Robin</span>
+          </a>
 
-				<div class="overlay" id="robin">
-					<a href="#" class="close">Close</a>
-					<a href="#batman" class="prev"></a>
-					<img src="img/full/robin.png" alt="">
-					<a href="#joker" class="next"></a>
-				</div>
-			</li>
+          <div class="overlay" id="robin">
+            <a href="#" class="close">Close</a>
+            <a href="#batman" class="prev"></a>
+            <img src="img/full/robin.png" alt="" />
+            <a href="#joker" class="next"></a>
+          </div>
+        </li>
 
-			<li class="joker">
-				<a href="#joker">
-					<img src="img/thumb/joker.png">
-					<span>Joker</span>
-				</a>
-				<div class="overlay" id="joker">
-					<a href="#" class="close">Close</a>
-					<a href="#robin" class="prev"></a>
-					<img src="img/full/joker.png" alt="">
-					<a href="#batman" class="next"></a>
-				</div>
-			</li>
+        <li class="joker">
+          <a href="#joker">
+            <img src="img/thumb/joker.png" />
+            <span>Joker</span>
+          </a>
+          <div class="overlay" id="joker">
+            <a href="#" class="close">Close</a>
+            <a href="#robin" class="prev"></a>
+            <img src="img/full/joker.png" alt="" />
+            <a href="#batman" class="next"></a>
+          </div>
+        </li>
 
-			<div class="clear"></div>
-		</ul>
-
-	</div>
-	<div class="footer">
-		<p>&copyCreated by Sandhika Galih & Dmscndraa</p>
-	</div>
-</body>
+        <div class="clear"></div>
+      </ul>
+    </div>
+    <div class="footer">
+      <p>&copyCreated by Sandhika Galih & Dmscndraa</p>
+    </div>
+  </body>
 </html>
