menambahkan link pada nama pembuat

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>The Dark Knight</h1>
-    <p class="thanks">Thanks to Sandhika Galih</p>
+    <p class="thanks">Thanks to <a href="https://www.youtube.com/c/WebProgrammingUNPAS">Sandhika Galih</a></p>
 
     <div class="container">
       <ul class="gallery">
@@ -57,7 +57,7 @@
       </ul>
     </div>
     <div class="footer">
-      <p>&copyCreated by Sandhika Galih & Dmscndraa</p>
+      <p>&copyCreated by <a href="https://github.com/sandhikagalih">Sandhika Galih</a> & <a href="https://github.com/Dimascndraa">Dmscndraa</a></p>
     </div>
   </body>
 </html>
