--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <h1>The Dark Knight</h1>
     <p class="thanks">Thanks to <a href="https://www.youtube.com/c/WebProgrammingUNPAS">Sandhika Galih</a></p>
+    <p class="thanks">
+      to <a href="https://dimascndraa.github.io">Main Portfolio</a> | 
+      to <a href="https://dimascndraa.github.io/portfolio-2">Portfolio-2</a>
+    </p>
 
     <div class="container">
       <ul class="gallery">
